--- a/main.html
+++ b/main.html
@@ -17,3 +17,4 @@
   <link rel="stylesheet" href="css/skins/color-5.css" class="alternate-style" title="color-5" disabled>
   <link rel="stylesheet" href="css/style-switcher.css">
 </head>
+</html>
