--- a/main.html
+++ b/main.html
@@ -9,9 +9,32 @@
   <!-- CSS Files -->
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/skins/color-1.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 </head>
 <body>
+  <!-- Main Start -->
+   <div class="main-container">
+    <!-- Aside Start -->
+    <div class="aside">
+      aside
+    </div>
+    <!-- Aside End -->
+    <!-- Main Content Start -->
+     <div class="main-content">
+      <!-- Home Section Start -->
+       <section class="home section">
+        Home
+       </section>
+
+      <!-- Home Section End -->
+
+
+     </div>
+    <!-- Main Content End -->
+  </div>
+   <!-- Main End -->
 
   <!-- Javascript Files -->
    <script src="js/script.js"></script>
 </body>
+</html>
