--- a/main.html
+++ b/main.html
@@ -16,7 +16,18 @@
    <div class="main-container">
     <!-- Aside Start -->
     <div class="aside">
-      aside
+      <div class="logo">
+        <a href="#"><span>A</span>tlas</a>
+      </div>
+      <ul class="nav">
+        <li><a href="#" class="active"><i class="active"></i>Home</a></li>
+        <li><a href="#"><i class="fa fa-user"></i>About Me</a></li>
+        <li><a href="#"><i class="fa fa-list"></i></a>Services</li>
+        <li><a href="#"><i class="fa fa-briefcase"></i></a>Portfolio</li>
+        <li><a href="#"><i class="fa fa-comments"></i></a>Contact</li>
+
+
+      </ul>
     </div>
     <!-- Aside End -->
     <!-- Main Content Start -->
