Changed comple site and created new main page

--- a/main.html
+++ b/main.html
@@ -1,51 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  
-  <!-- CSS Files -->
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/skins/color-1.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-</head>
-<body>
-  <!-- Main Start -->
-   <div class="main-container">
-    <!-- Aside Start -->
-    <div class="aside">
-      <div class="logo">
-        <a href="#"><span>A</span>tlas</a>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Website title</title>
+    <meta name="description" content="description" />
+    <meta name="keywords" content="keyword1, keyword2" />
+    <link
+      rel="shortcut icon"
+      href="assets/icons/favicon.ico"
+      type="image/x-icon"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      * {
+        font-family: "Quicksand", sans-serif;
+      }
+    </style>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <header>
+      <div class="header-content">
+        <a href="#home" id="logo">Nithurjan Ayadurai</a>
+
+        <img src="assets/icons/menu.svg" id="menu" alt="menu" />
+
+        <nav>
+          <img src="assets/icons/close.svg" id="close" alt="close" />
+          <a href="#home">Home</a>
+          <a href="#aboutme">About me</a>
+          <a href="#skills">Skills</a>
+          <a href="#experiences">Experiences</a>
+          <a href="#education">Education</a>
+          <a href="#contact">Contact</a>
+        </nav>
       </div>
-      <ul class="nav">
-        <li><a href="#" class="active"><i class="active"></i>Home</a></li>
-        <li><a href="#"><i class="fa fa-user"></i>About Me</a></li>
-        <li><a href="#"><i class="fa fa-list"></i></a>Services</li>
-        <li><a href="#"><i class="fa fa-briefcase"></i></a>Portfolio</li>
-        <li><a href="#"><i class="fa fa-comments"></i></a>Contact</li>
+    </header>
 
-
-      </ul>
-    </div>
-    <!-- Aside End -->
-    <!-- Main Content Start -->
-     <div class="main-content">
-      <!-- Home Section Start -->
-       <section class="home section">
-        Home
-       </section>
-
-      <!-- Home Section End -->
-
-
-     </div>
-    <!-- Main Content End -->
-  </div>
-   <!-- Main End -->
-
-  <!-- Javascript Files -->
-   <script src="js/script.js"></script>
-</body>
-</html>
+    <div class="hero-section" id="home">
+      <div class="hero-content">
+        <div class="hero-content-item">
+          <h4>Hello</h4>
+          <h1>My Name is Nithurjan Ayadurai</h1>
+          <p>
