--- a/main.html
+++ b/main.html
@@ -27,7 +27,7 @@
   <body>
     <header>
       <div class="header-content">
-        <a href="#home" id="logo">Nithurjan Ayadurai</a>
+        <a href="#home" id="logo">Name here</a>
 
         <img src="assets/icons/menu.svg" id="menu" alt="menu" />
 
@@ -49,3 +49,59 @@
           <h4>Hello</h4>
           <h1>My Name is Nithurjan Ayadurai</h1>
           <p>
+            As an SDN Network Engineer with a passion for innovative networking solutions, I invite you to explore my professional background, certifications, and expertise in modern IT infrastructure. Here, you'll find insights into my experience and skills that drive my work in Software Defined Networking.
+          </p>
+          <div class="buttons">
+            <a class="btn btn-primary" href="#aboutme">Learn more</a>
+            <a class="btn btn-secondary" href="#contact">Contact me</a>
+          </div>
+        </div>
+
+        <div class="hero-content-item">
+          <img
+            src="assets/images/hero.jpeg"
+            width="500"
+            height="530"
+            alt="hero"
+          />
+        </div>
+      </div>
+    </div>
+
+    <div class="container-bg" id="aboutme">
+      <div class="container">
+        <div class="title">
+          <h2>About me</h2>
+          <hr />
+        </div>
+
+        <div class="about-me">
+          <img
+            src="assets/images/about-me.jpeg"
+            width="670"
+            height="670"
+            alt="about me"
+          />
+
+          <div class="about-me-text">
+            <h3>Professional Background</h3>
+
+            <p>
+              My name is Nithurjan Ayadurai, and I work as an SDN Network Engineer at Swisscom, where I support customers in implementing and optimizing their infrastructure with Software Defined Networking (SDN). My passion for innovative network solutions has guided me through various roles in the IT industry, giving me extensive experience in designing and managing modern network architectures.
+            </p>
+
+            <p>
+              I am currently in the final stages of completing my Bachelor's degree in Business Information Technology at the Bern University of Applied Sciences, which I will graduate from in summer 2025. Additionally, I hold a diploma in IT from a higher technical college, which has provided me with a solid foundation for my career in network engineering and IT infrastructure.
+            </p>
+
+            <p>
+              Over the years, I have earned several important certifications that enhance my expertise in the field. These include the Professional Scrum Product Owner (PSPO I), issued in August 2024, and the Cisco Certified Support Technician Networking (CCST Networking), certified in May 2024. I am also Microsoft Certified in Azure Fundamentals (2020) and hold the MCSA: Windows 10 certification from 2018. Additionally, I have completed ITIL Foundation in IT Service Management (2018) and achieved the Fortinet NSE 1-3 Network Security Associate certifications, which I held from 2021 to 2023, demonstrating my proficiency in network security.!
+            </p>
+
+            <p>
+              In my free time, I enjoy playing football, staying fit at the gym, and expanding my knowledge through reading. I'm excited about the opportunities and challenges that the future of network technology and IT will bring.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
