--- a/main.html
+++ b/main.html
@@ -105,3 +105,151 @@
         </div>
       </div>
     </div>
+
+    <div class="container" id="skills">
+      <div class="title">
+        <h2>Skills</h2>
+        <hr />
+      </div>
+      <div class="skills">
+        <div class="skill" data-percentage="85">
+          <div class="skill-info">
+            <h3>Networking</h3>
+
+            <h4 class="percentage-text">0%</h4>
+          </div>
+          <div class="percentage">
+            <div class="percentage-fill"></div>
+          </div>
+          <p>
+            I have a strong foundation in Networking, with a particular focus on Software Defined Networking (SDN). 
+            Through my role as an SDN Network Engineer, I have honed my ability to design, manage, and troubleshoot 
+            complex network infrastructures. Whether it's traditional networks or cutting-edge SDN solutions, 
+            I bring expertise in ensuring seamless communication and optimizing network performance for clients.
+          </p>
+        </div>
+
+        <div class="skill" data-percentage="76">
+          <div class="skill-info">
+            <h3>Data Science</h3>
+            <h4 class="percentage-text">0%</h4>
+          </div>
+          <div class="percentage">
+            <div class="percentage-fill"></div>
+          </div>
+          <p>
+            Data Science is one of my key areas of expertise. I enjoy working with data to uncover insights and drive business decisions. 
+            Proficient in Python and R, I analyze large datasets, build predictive models, and communicate results that provide real value. 
+            My approach to data is always centered on understanding trends and providing actionable insights to solve complex problems.
+          </p>
+        </div>
+
+        <div class="skill" data-percentage="70">
+          <div class="skill-info">
+            <h3>Python</h3>
+            <h4 class="percentage-text">0%</h4>
+          </div>
+          <div class="percentage">
+            <div class="percentage-fill"></div>
+          </div>
+          <p>
+            Python is my go-to language for automating tasks, data analysis, and software development. 
+            I have a solid command of the language and its many libraries, including Pandas, NumPy, and Matplotlib. 
+            From building data-driven applications to streamlining workflows, I leverage Python to create efficient solutions that 
+            meet the needs of modern businesses.
+          </p>
+        </div>
+
+        <div class="skill" data-percentage="96">
+          <div class="skill-info">
+            <h3>Cloud</h3>
+            <h4 class="percentage-text">0%</h4>
+          </div>
+          <div class="percentage">
+            <div class="percentage-fill"></div>
+          </div>
+          <p>
+            My expertise in Cloud technologies allows me to deploy scalable and efficient cloud infrastructures for a variety of 
+            business needs. I have extensive experience with major cloud platforms and excel in setting up environments that optimize 
+            cost and performance. Cloud migration, infrastructure management, and deploying cloud-native applications are areas where 
+            I truly excel.
+          </p>
+        </div>
+
+        <div class="skill" data-percentage="88">
+          <div class="skill-info">
+            <h3>Project Management</h3>
+            <h4 class="percentage-text">0%</h4>
+          </div>
+          <div class="percentage">
+            <div class="percentage-fill"></div>
+          </div>
+          <p>
+            With a proven track record in project management, I ensure that projects are delivered on time and within scope. 
+            My experience with agile methodologies like Scrum allows me to lead teams effectively, keep stakeholders engaged, 
+            and achieve results that exceed expectations. I am adept at coordinating complex projects and ensuring seamless execution 
+            from start to finish.
+          </p>
+        </div>
+
+        <div class="skill" data-percentage="76">
+          <div class="skill-info">
+            <h3>R Studio</h3>
+            <h4 class="percentage-text">0%</h4>
+          </div>
+          <div class="percentage">
+            <div class="percentage-fill"></div>
+          </div>
+          <p>
+            R Studio is one of the tools I use regularly for statistical analysis and data visualization. 
+            I build robust data models and craft visualizations that make complex data easy to understand. 
+            My skills in R help turn raw data into meaningful insights, assisting businesses in making well-informed decisions.
+          </p>
+        </div>
+
+        <div class="skill" data-percentage="90">
+          <div class="skill-info">
+            <h3>English</h3>
+            <h4 class="percentage-text">0%</h4>
+          </div>
+          <div class="percentage">
+            <div class="percentage-fill"></div>
+          </div>
+          <p>
+            As a proficient English speaker, I am comfortable working in international environments and communicating effectively 
+            across teams. My strong written and verbal communication skills ensure that I can collaborate seamlessly with global 
+            clients and colleagues, contributing to successful project outcomes.
+          </p>
+        </div>
+
+        <div class="skill" data-percentage="100">
+          <div class="skill-info">
+            <h3>German</h3>
+            <h4 class="percentage-text">0%</h4>
+          </div>
+          <div class="percentage">
+            <div class="percentage-fill"></div>
+          </div>
+          <p>
+            Being a native German speaker, I have excellent command of the language in both professional and technical contexts. 
+            I use my language skills to communicate clearly, manage client expectations, and ensure that all project documentation 
+            is precise and professional.
+          </p>
+        </div>
+
+        <div class="skill" data-percentage="100">
+          <div class="skill-info">
+            <h3>Tamil</h3>
+            <h4 class="percentage-text">0%</h4>
+          </div>
+          <div class="percentage">
+            <div class="percentage-fill"></div>
+          </div>
+          <p>
+            Fluency in Tamil allows me to work efficiently in multilingual teams and collaborate with a broader range of partners. 
+            My ability to communicate in Tamil enhances my adaptability and cultural awareness, especially in international projects 
+            that involve Tamil-speaking stakeholders.
+          </p>
+        </div>
+      </div>
+    </div>
