Experience and Education Section + CSS

--- a/main.html
+++ b/main.html
@@ -253,3 +253,124 @@
         </div>
       </div>
     </div>
+
+    <script></script>
+
+    <div class="container-bg">
+      <div class="container" id="experiences">
+        <div class="title">
+          <h2>Experiences</h2>
+          <hr />
+        </div>
+
+        <div class="experiences">
+          <div class="experience">
+            <h3>Swisscom</h3>
+            <h4>SDN Network Engineer</h4>
+            <p>2022-Now</p>
+            <p>
+              At Swisscom, I support and advise clients in resolving complex network issues in the area of Software Defined Networking (SDN). I work closely with internal teams and clients to analyze specific network needs and develop tailored, innovative solutions that meet both current and future business requirements. I place a strong emphasis on customer satisfaction, which I ensure through proactive monitoring, rapid troubleshooting, and continuous optimization of network infrastructure. To further assist clients, I create comprehensive documentation and conduct training in SDN, enabling them to manage and optimize their networks independently.
+            </p>
+          </div>
+
+          <div class="experience">
+            <h3>Securiton</h3>
+            <h4>Network Engineer</h4>
+            <p>2021-2022</p>
+            <p>
+              At Securiton AG, I am responsible for supporting and advising on the development and optimization of internal network architectures. I collaborate closely with internal IT teams to analyze specific network requirements and implement innovative solutions that align with our organizational goals, both current and future. I ensure high operational stability through proactive monitoring, efficient troubleshooting, and continuous optimization of our internal network infrastructure. Additionally, I document configurations and processes thoroughly and provide training to support the IT team in independently managing and enhancing our network environment.
+            </p>
+          </div>
+
+          <div class="experience">
+            <h3>PageUp AG</h3>
+            <h4>ICT Supporter</h4>
+            <p>2017-2021</p>
+            <p>
+              At PageUp AG, I am responsible for providing first- and second-level IT support to ensure smooth daily operations. My duties include server administration, remote and on-site technical support, and management of systems such as System Center Configuration Manager (SCCM) and Active Directory. I troubleshoot and resolve technical issues efficiently, document solutions for future reference, and perform hardware repairs on devices like laptops and desktops. Through my role, I contribute to maintaining a stable IT environment and supporting team members in effectively managing and resolving IT challenges.
+            </p>
+          </div>
+
+          <div class="experience">
+            <h3>Riegler AG</h3>
+            <h4>System Engineer</h4>
+            <p>2016-2017</p>
+            <p>
+              At Riegler AG, I was responsible for administering and supporting the company's IT infrastructure, including both server management and on-site technical support. My role involved building and maintaining the IT infrastructure, documenting configurations and processes, and managing Active Directory, DHCP, DNS, and Group Policy. I also implemented virtualization solutions using Hyper-V and configured Microsoft Office 365 for clients. Additionally, I was responsible for setting up permissions, performing hardware repairs, and managing backup solutions, contributing to a reliable and well-documented IT environment.
+            </p>
+          </div>
+
+          <div class="experience">
+            <h3>Bundesamt für Wirtschaft, Bildung und Forschung</h3>
+            <h4>Lernender Informatiker EFZ</h4>
+            <p>2012-2016</p>
+            <p>
+              During my apprenticeship as an IT systems technician at the Federal Department of Economic Affairs, Education and Research, I gained hands-on experience in various areas of IT infrastructure. My responsibilities included virtualizing systems with VMware ESX servers, providing first-level support, and managing users and groups in Active Directory. I developed PowerShell scripts to streamline server management and led a project to implement Windows 10 deployment using Microsoft Deployment Toolkit. Additionally, I configured domain controllers, SQL servers, and file servers, applying the HERMES 5.1 project management methodology, which allowed me to build a strong foundation in IT systems and network administration.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container" id="education">
+      <div class="title">
+        <h2>Education</h2>
+        <hr />
+
+        <div class="educations">
+          <div class="education">
+            <h3>2021-2025</h3>
+            <hr />
+            <h4>
+             Berner Fachhochschule:  Bachelor’s Degree in Business Information Technology
+            </h4>
+          </div>
+
+          <div class="education">
+            <h3>2016-2020</h3>
+            <hr />
+            <h4>
+              IFA Bern: Dipl. Technician HF in Systems and Network Engineering
+            </h4>
+          </div>
+
+          <div class="education">
+            <h3>2012-2016</h3>
+            <hr />
+            <h4>
+              Gibb Bern: Apprenticeship as an IT Specialist, Specialization in Systems Engineering
+            </h4>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container-bg">
+      <div class="container" id="contact">
+        <div class="title">
+          <h2>Contact me</h2>
+          <hr />
+        </div>
+
+        <form action="https://formbold.com/s/ob1MQ" method="POST">
+          <input type="text" placeholder="Name" name="name" required />
+          <input type="email" placeholder="Email" name="email" required />
+          <textarea
+            name="message"
+            rows="5"
+            id="message"
+            placeholder="Your message"
+          ></textarea>
+
+          <input type="submit" value="Send" />
+        </form>
+      </div>
+    </div>
+
+    <footer>
+      <p>Copyright © 2024 Name | All Rights Reserved.</p>
+    </footer>
+
+    <script src="js/script.js"></script>
+  </body>
+</html>
