--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <body>
     <header>
       <div class="header-content">
-        <a href="#home" id="logo">Name here</a>
+        <a href="#home" id="logo">Nithurjan Ayadurai</a>
 
         <img src="assets/icons/menu.svg" id="menu" alt="menu" />
 
