--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
     </div>
 
     <footer>
-      <p>Copyright © 2024 Name | All Rights Reserved.</p>
+      <p>Copyright © 2024 Nithurjan Ayadurai | All Rights Reserved.</p>
     </footer>
 
     <script src="js/script.js"></script>
